chore: return env and deployment in system get api endpoint
